@@ -44,6 +44,7 @@ public:
 	virtual void Apply(Film &film, const u_int index);
 
 	virtual bool CanUseHW() const { return true; }
+	virtual void AddHWChannelsUsed(std::unordered_set<Film::FilmChannelType> &hwChannelsUsed) const;
 	virtual void ApplyHW(Film &film, const u_int index);
 
 	template<class T> static void ApplyBlurFilter(const u_int width, const u_int height,
