@@ -43,6 +43,7 @@ public:
 	virtual void Apply(Film &film, const u_int index);
 
 	virtual bool CanUseHW() const { return true; }
+	virtual void AddHWChannelsUsed(std::unordered_set<Film::FilmChannelType> &hwChannelsUsed) const;
 	virtual void ApplyHW(Film &film, const u_int index);
 
 	friend class boost::serialization::access;
