@@ -22,6 +22,7 @@
 #include <boost/foreach.hpp>
 
 #include "slg/film/film.h"
+#include "slg/film/imagepipeline/imagepipeline.h"
 
 using namespace std;
 using namespace luxrays;
