@@ -235,8 +235,12 @@ float CameraResponsePlugin::ApplyCrf(float point, const vector<float> &from, con
 }
 
 //------------------------------------------------------------------------------
-// OpenCL version
+// HardwareDevice version
 //------------------------------------------------------------------------------
+
+void CameraResponsePlugin::AddHWChannelsUsed(unordered_set<Film::FilmChannelType> &hwChannelsUsed) const {
+	hwChannelsUsed.insert(Film::IMAGEPIPELINE);
+}
 
 void CameraResponsePlugin::ApplyHW(Film &film, const u_int index) {
 	if (!applyKernel) {
