@@ -139,8 +139,12 @@ void ColorAberrationPlugin::Apply(Film &film, const u_int index) {
 }
 
 //------------------------------------------------------------------------------
-// OpenCL version
+// HardwareDevice version
 //------------------------------------------------------------------------------
+
+void ColorAberrationPlugin::AddHWChannelsUsed(unordered_set<Film::FilmChannelType> &hwChannelsUsed) const {
+	hwChannelsUsed.insert(Film::IMAGEPIPELINE);
+}
 
 void ColorAberrationPlugin::ApplyHW(Film &film, const u_int index) {
 	const u_int width = film.GetWidth();
